# DigitalWatermarking

./: .gitignore  CMakeLists.txt  Facade.h  README.md  code_review.txt  filters.xml  main.cpp
Controllers/: Controller.h  QTController.h  SimpleController.h  Simple_Controller.h
Debug/: java  javasig.sig  my.sig  my1.sig
Interface/: CMakeLists.txt  Watermark.pro  creation.cpp  creation.h  creation.ui  main.cpp  makewm.cpp  makewm.h  makewm.ui  menu.cpp  menu.h  menu.ui  resource.qrc  validation.cpp  validation.h  validation.ui
Models/: Model.h
Views/: QTView.h  View.h
build-Watermark-Desktop_Qt_5_7_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Watermark.Debug  object_script.Watermark.Release  ui_creation.h  ui_makewm.h  ui_menu.h  ui_validation.h
build-Watermark-Desktop_Qt_5_7_0_MinGW_32bit-Debug/debug/: moc_creation.cpp  moc_makewm.cpp  moc_menu.cpp  moc_validation.cpp  qrc_resource.cpp
model/: DWTDugad.cpp  DWTDugad.h  Model.h  Signature.h  Watermark_Model.h  Watermark_Plugin.h
utils/: DWT.h  DWTUtil.cpp  DWTUtil.h  ImageTree.h  ImageUtil.h  MyImage.cpp  MyImage.h  ParserUtil.h  ProjectException.h
